--- a/biblio.bib
+++ b/biblio.bib
@@ -7,6 +7,13 @@
   YEAR         = "2005"
 }
 
+@BOOK{openstax,
+  AUTHOR ="{Rice University}",
+   title = { Introduction - Introductory Statistics | OpenStax},
+   url = {https://openstax.org/books/introductory-statistics/pages/1-introduction},
+}
+
+
 @MISC{Iubh:2021,
   AUTHOR       = "{IU Internationale Hochschule GmbH}",
   TITLE        = "{Advanced Statistics}",
