Task 2_b first draft

--- a/00-Main.tex
+++ b/00-Main.tex
@@ -21,6 +21,7 @@ numbers=noendperiod, % Don't add a period at the end of a chapter number
 \usepackage{mathtools}
 % get custom bibliography style working without prepending [brackets]
 \usepackage{natbib}
+\usepackage{amsmath}
 \setcitestyle{aysep={}} % remove comma as delimiter 
 
 % breaks line at hyphens (resolves formatting issues in bibliography)
