--- a/biblio.bib
+++ b/biblio.bib
@@ -11,6 +11,7 @@
   AUTHOR ="{Rice University}",
    title = { Introduction - Introductory Statistics | OpenStax},
    url = {https://openstax.org/books/introductory-statistics/pages/1-introduction},
+   YEAR         = "2003"
 }
 
 
