Updates from Overleaf

--- a/biblio.bib
+++ b/biblio.bib
@@ -14,6 +14,13 @@
    YEAR         = "2003"
 }
 
+@MISC{wiki:trig,
+  AUTHOR       = "{WIKI Books}",
+  TITLE        = "{Trigonometric Substitution}",
+  YEAR 		   = "2022",
+  NOTE         = "[last access: 23.05.2022]).",
+  url = {https://en.wikibooks.org/wiki/Calculus/Integration_techniques/Trigonometric_Substitution},
+}
 
 @MISC{Iubh:2021,
   AUTHOR       = "{IU Internationale Hochschule GmbH}",
