--- a/005-Abbreviations.tex
+++ b/005-Abbreviations.tex
@@ -6,6 +6,7 @@
 
     \acro{CDF}{Cumulative Distribution Function}
     \acro{CCDF}{Complementary Cumulative Distribution Function}
+    \acro{DOF}{Degrees Of Freedom}
     \acro{PDF}{Probability Density Function}
     \acro{PMF}{Probability Mass Function}
 
