--- a/biblio.bib
+++ b/biblio.bib
@@ -24,7 +24,15 @@
 
 @MISC{Iubh:2021,
   AUTHOR       = "{IU Internationale Hochschule GmbH}",
-  TITLE        = "{Advanced Statistics}",
+  TITLE        = "{Advanced Statistics Script}",
   YEAR 		   = "2021",
   NOTE         = "[last access: 02.06.2022])."
+}
+
+@MISC{t-table,
+  AUTHOR       = "{T-Table Distribution}",
+  title = {{T-Table Distribution}},
+  howpublished = "\url{http://https://www.tdistributiontable.com//}",
+  year = {2022}, 
+  NOTE = "[Online; last access 30.05.2022]"
 }
