--- a/tasks/task2.tex
+++ b/tasks/task2.tex
@@ -56,7 +56,7 @@ The Covariance of two variables can be calculated using cov(X,Y) =  $\frac{1}{N}
 
 Similarly, the Variance can be calculated using var[X]=$\frac{1}{N} \sum_{i=1}^{N}(x_i - \mu_x)^2$. The calculated variances are as follows Var[X]=13.60 and Var[Y]= 2.6e+5.
 
-\subsection{Task b}
+\section{Task b}
 It is given that a ball is thrown at a random angle $\theta \in$ [0, 360) which is in degrees and in a random radius r $\in$ [0, 1] which are both independent and uniform. Due to the fact the random variables are uniform we can easily define their respective density functions f($\theta$) = $\frac{1}{360}$ and f(r) = 1. This can be calculated because the PDF of a uniformly distributed function is given by 
 
 \begin{equation}
