--- a/tasks/task1.tex
+++ b/tasks/task1.tex
@@ -45,7 +45,7 @@ The event of meteorites falling on the ocean each year also follows a similar pa
 
 In Figure \ref{fig:task_1_b} we can see that the number of meteorites (n) which can fall in a year is chosen to be 53 in the distribution. Looking at the probabilities  \begin{equation} P(X=k)=\frac{\lambda^k e^{-k}}{k!}, k=0,1,2…,  \label{pmf_poission}\end{equation} when k=52 the probability of meteorites falling is less than 0.5 or 0.005. Due to this reason the n=52 is used to depict the distribution. 
 
-\subsection{Median and Variance}
+\subsubsection{Median and Variance}
 The variance of a Poisson distribution is given by Var[X]=$\lambda=\sigma^2$ (\cite{hogg:2005}), therefore the variance of this distribution is equal to λ parameter Var[X]=37.
 Likewise, the median can be defined as the mid-point, where 50\% of the samples are either above or below this point. For this we can calculate the value of X whose cumulative sum of the probability is less than 50\%. In this case the median is 37 which is the same as the median and variance $\lambda$. The calculation of the median or 2nd quartile is done using a for loop see (listing \ref{lst:code_task_1_b} line 21)  with the cumulative sum of the probabilities and the median is stored when a value is found which is greater than 50 is found. Therefore, we can say that for this distribution the mean, median and variance are the same.
 
@@ -115,7 +115,7 @@ plt.savefig('images/task_1_b.pdf')
 \end{figure}
 \FloatBarrier
 
-\subsection{Task c}
+\section{Task c}
 
 Given that Y is a random variable with time to hear an owl, and the probability ones needs to wait to hear the owl after y hours is:
 \begin{equation} \label{eqn:cdf_minus_1}
