Corrected t table bib

--- a/biblio.bib
+++ b/biblio.bib
@@ -32,7 +32,7 @@
 @MISC{t-table,
   AUTHOR       = "{T-Table Distribution}",
   title = {{T-Table Distribution}},
-  howpublished = "\url{http://https://www.tdistributiontable.com//}",
+  howpublished = "\url{https://www.tdistributiontable.com//}",
   year = {2022}, 
   NOTE = "[Online; last access 30.05.2022]"
 }
