Added more stuff task 4 1st draft

--- a/tasks/task4.tex
+++ b/tasks/task4.tex
@@ -32,13 +32,13 @@ An error I probability, which is the error of rejecting the null hypothesis when
     \item $d.o.f = \frac{2}{\frac{1}{n_1}+\frac{1}{n_2}}$ where $n_1$= 1000 and $n_2$ = 10
     \item $d.o.f = \frac{2}{\frac{1}{1000}+\frac{1}{10}}$
     \item $d.o.f = 19.8$
-    \item $d.o.f = 20$ ( rounded Up)
+    \item $d.o.f = 20$ ( rounded up)
 \end{enumerate}
 With the d.o.f we can look up in the T-Table distribution (see \cite{t-table}) to find out the critical region for the $\alpha$ value of 0.05 of the two tailed distribution for 20 degrees of freedom which is 2.086 and we can rewrite the probability of the rejection region as $P(|T| > 2.086) = \frac{\alpha}{2}$. Firstly, we calculate the $T_{obv}$ from the test statistic using the welch's test. The calculation steps are as follows:
 \begin{enumerate}
     \item $T_{obv} = \frac{<X_1> - <X_2>}{\sqrt{\frac{S_1^2}{n_1} + \frac{S_2^2}{n_2}}}$ where $X_1 = 971, X_2 = 971.3, S_1 = 15.2 \text{ and } S_2 = 11.10$ 
     \item $T_{obv} = \frac{971 - 971.3}{\sqrt{\frac{231.04}{1000} + \frac{123.34}{10}}}$
-    \item $T_{obv} = - 0.084$
-    \item $|T_{obv}| = 0.084$
+    \item $T_{obv} = - 0.0847$
+    \item $|T_{obv}| = 0.0847$ ( We take the absolute value because the T - Distribution is symmetric.
 \end{enumerate}
 Similarly, we can also calculate the p-value for the given test which is given as $P(T > |T_{obv}| | H_0) = 2P(T > 0.084 | H_0) = 0.933 $ (Calculated using wolfram alpha). Lastly, we can now conclude and say that we do not reject our null hypothesis because the the calculated p-value(0.933)  $> \alpha$ (0.05), which gives us a hint that these two samples are not statistically significant or in other words very similar and produce consistent results.
