--- a/00-Main.tex
+++ b/00-Main.tex
@@ -121,6 +121,7 @@ numbers=noendperiod, % Don't add a period at the end of a chapter number
 \include{tasks/task2}
 \include{tasks/task3}
 \include{tasks/task4}
+\include{tasks/task5}
 %\include{020-Body}
 %\include{030-Conclusion}
 
