--- a/tasks/task4.tex
+++ b/tasks/task4.tex
@@ -19,7 +19,7 @@ Now, for the random sample of the weights of new hammer production factory $W = 
     \end{split}
 \end{equation}
 This hypothesis is chosen because we want to check if there exists a similarity between the production for the weight of the hammers of the two production lines. When we assume that the mean of the new production site is equal to the existing one we propose that the weights might produce a more constant weight if we do not reject the null hypothesis. Also, when we reject the null hypothesis it can be said that the weights are not consistent.\newline\newline
-Furthermore, in the given case we do not know the neither the population mean nor the population variances, we rather only have the information about two sample means and their sample variances. Therefore, in this case a welch's test (see \cite{hogg:2005}, pg. 200) deems to be suitable to carry out the test statistics. We can define out test statistic as T and the critical region as C where $P(|T| > C) =\frac{\alpha}{2}$ \label{eqn:alpha_2_rr}:
+Furthermore, in the given case we do not know the neither the population mean nor the population variances, we rather only have the information about two sample means and their sample variances. Therefore, in this case a welch's test (see \cite{Iubh:2021}, pg. 200) deems to be suitable to carry out the test statistics. We can define out test statistic as T and the critical region as C where $P(|T| > C) =\frac{\alpha}{2}$ \label{eqn:alpha_2_rr}:
 \begin{equation}
     \begin{split}
       |T| > C_{\frac{\alpha}{2}, DOF}& \text{ (Reject $H_0$)}\\
@@ -39,6 +39,6 @@ With the d.o.f we can look up in the T-Table distribution (see \cite{t-table}) t
     \item $T_{obv} = \frac{<X_1> - <X_2>}{\sqrt{\frac{S_1^2}{n_1} + \frac{S_2^2}{n_2}}}$ where $X_1 = 971, X_2 = 971.3, S_1 = 15.2 \text{ and } S_2 = 11.10$ 
     \item $T_{obv} = \frac{971 - 971.3}{\sqrt{\frac{231.04}{1000} + \frac{123.34}{10}}}$
     \item $T_{obv} = - 0.0847$
-    \item $|T_{obv}| = 0.0847$ ( We take the absolute value because the T - Distribution is symmetric.
+    \item $|T_{obv}| = 0.0847$ ( We take the absolute value because the T - Distribution is symmetric and both tails must be accounted for.)
 \end{enumerate}
 Similarly, we can also calculate the p-value for the given test which is given as $P(T > |T_{obv}| | H_0) = 2P(T > 0.084 | H_0) = 0.933 $ (Calculated using wolfram alpha). Lastly, we can now conclude and say that we do not reject our null hypothesis because the the calculated p-value(0.933)  $> \alpha$ (0.05), which gives us a hint that these two samples are not statistically significant or in other words very similar and produce consistent results.
