--- a/00-Main.tex
+++ b/00-Main.tex
@@ -122,6 +122,7 @@ numbers=noendperiod, % Don't add a period at the end of a chapter number
 \include{tasks/task3}
 \include{tasks/task4}
 \include{tasks/task5}
+\include{tasks/task6}
 %\include{020-Body}
 %\include{030-Conclusion}
 
