--- a/001-Titlepage.tex
+++ b/001-Titlepage.tex
@@ -10,7 +10,7 @@
 
 \begin{Large} 
 \begin{center}
-Workbook
+Advanced Statistics
 \end{center}
 \end{Large} 
 
@@ -24,7 +24,7 @@ University of Applied Science - Online
 
 \begin{large} 
 \begin{center}
-Study-branch: PLEASE ADAPT ALL ASPECTS TO MATCH REQUIREMENTS
+Study-branch: Cyber-Security Management (Msc) 
 \end{center}
 \end{large}
 
@@ -32,7 +32,7 @@ Study-branch: PLEASE ADAPT ALL ASPECTS TO MATCH REQUIREMENTS
 
 \begin{Large} 
 \begin{center}
-\textbf{<THIS IS THE TITLE TO BE ADAPTED>}
+\textbf{Workbook}
 \end{center}
 \end{Large}
 
@@ -48,7 +48,7 @@ Prannoy Mulmi
 
 \begin{large} 
 \begin{center}
-Matrikelnummer: 010101001
+Matrikelnummer: 321148233
 \end{center}
 \end{large} 
 
@@ -56,29 +56,24 @@ Matrikelnummer: 010101001
 
 \begin{large} 
 \begin{center}
-Straße 10
+StephanStr. 48b, 22047 Hamburg
 \end{center}
 \end{large} 
 
 \vspace*{-6mm}
 
-\begin{large} 
-\begin{center}
-realized in....
-\end{center}
-\end{large} 
 
 \vspace*{5mm}
 
 \begin{large} 
 \begin{center}
-Advisor: <Advisor>
+Advisor: Paul Libbrecht
 \end{center}
 \end{large} 
 
 \begin{large} 
 \begin{center}
-Realized with input of the Parameter Generator: <Signature-Hash> $\Omega \longrightarrow R^2$
+Realized with input of the Parameter Generator: 2290e7ff5d0baaaddc77746a296e78c85cf955b0
 \end{center}
 \end{large} 
 
@@ -88,7 +83,7 @@ Realized with input of the Parameter Generator: <Signature-Hash> $\Omega \longri
 
 \begin{large} 
 \begin{center}
-Delivery date: 1.1.1970
+Delivery date: 15.06.2022
 \end{center}
 \end{large} 
 
