--- a/tasks/task2.tex
+++ b/tasks/task2.tex
@@ -9,22 +9,18 @@ For the given samples (Variable X and Y) a scatter plot deems to be the most sui
 \caption{Scatter Plot for X and Y}\label{fig:task_2_a}
 \end{figure}
 \FloatBarrier
-\newline 
-A simple look in the scatter plot (fig:\ref{fig:task_2_a}) shows us the data have a very large covariance as the points in the graph are very sparsely distributed in the plot.
+\newline A simple look in the scatter plot (fig:\ref{fig:task_2_a}) shows us the data have a very large covariance as the points in the graph are very sparsely distributed in the plot.
 
 \begin{lstlisting}[caption={Plotting the Scatter Plot with Variance Calculations)},label={lst:code_task_2_a}]
 import numpy as np
 import matplotlib.pyplot as plt
 
 # Definitions
-sample_data = [(-1.202, 563.024), (2.112, 291.072), (2.827, -893.619), (-0.314, 1321.814),
-               (-1.477, -91.573), (-6.516, 446.336), (0.920, -111.487), (3.477, -153.165),
-               (-7.273, 1076.221), (2.251, 477.931), (-0.713, 909.696), (-0.853, 226.865),
-               (-3.176, 389.413), (1.913, -47.169), (-1.070, -178.695), (-3.385, 744.486),
-               (-9.506, 362.670), (-7.004, 364.578), (0.504, 324.975), (2.861, -360.571)]
+sample_data = [(2.919, 601.99), (5.057, -407.77), (1.168, -399.27), (6.401, 599.08), (0.973, 193.58), (-8.109, 1738.46),(2.883, 380.56), (3.652, -354.4), (-8.509, 591.96), (-8.886, -87.1), (-1.664, -1748.93),(-0.557, -57.74), (-15.28, 518.67), (-1.852, -56.12), (0.092, 434.48), (-6.536, -128.93),(-1.547, -696.37), (-1.281, -323.53), (6.454, -62.28), (-7.779, 614.93)]
 
 # Plot the probability distribution
 fig, ax = plt.subplots(1, 1, figsize=(20, 6))
+
 # Separate value of X and Y from sample data
 x, y = zip(*sample_data)
 
@@ -38,10 +34,12 @@ mean_x = sum(x) / len(x)
 mean_y = sum(y) / len(y)
 x_minus_mean_x = np.asarray(x) - mean_x
 y_minus_mean_y = np.asarray(y) - mean_y
+
 # Covariance of X & Y
 cov_x_y = sum(x_minus_mean_x * y_minus_mean_y) / len(x)
 # Variance of X
 var_x = sum(np.power(x_minus_mean_x, 2)) / len(x)
+
 # Variance of Y
 var_y = sum(np.power(y_minus_mean_y, 2)) / len(y)
 
@@ -51,10 +49,9 @@ plt.savefig('images/task_2_a.pdf')
 
 \subsubsection{Mean \& Covariance}   
 
-The mean of Variables can be calculated using E[X]=  $\frac{1}{N} \sum_{i=1}^{N}x_i$  (\cite{Iubh:2021}) where N=20 is the total number of samples and the numerator is the sum of the random variable X or Y. Using this formula, the expectation ($\mu$) of the variable X and Y are calculated. E[X] = $\mu_x$= -1.28 and E[Y] = $\mu_y$= 283.14.\newline 
-The Covariance of two variables can be calculated using cov(X,Y) =  $\frac{1}{N} \sum_{i=1}^{N}(x_i - \mu_x)^2 (y_i - \mu_y)$ (\cite{Iubh:2021}). Using the given formula, the cov(X,Y)= -863.73
-
-Similarly, the Variance can be calculated using var[X]=$\frac{1}{N} \sum_{i=1}^{N}(x_i - \mu_x)^2$. The calculated variances are as follows Var[X]=13.60 and Var[Y]= 2.6e+5.
+The mean of Variables can be calculated using E[X]=  $\frac{1}{N} \sum_{i=1}^{N}x_i$  (\cite{Iubh:2021}) where N=20 is the total number of samples and the numerator is the sum of the random variable X or Y. Using this formula, the expectation ($\mu$) of the variable X and Y are calculated. E[X] = $\mu_x$= -1.62 and E[Y] = $\mu_y$= 67.56 \newline 
+The Covariance of two variables can be calculated using cov(X,Y) =  $\frac{1}{N} \sum_{i=1}^{N}(x_i - \mu_x)^2 (y_i - \mu_y)$ (\cite{Iubh:2021}). Using the given formula, the cov(X,Y)= -1040.32\newline
+Similarly, the Variance can be calculated using var[X]=$\frac{1}{N} \sum_{i=1}^{N}(x_i - \mu_x)^2$. The calculated variances are as follows Var[X]=32.629 and Var[Y]= 4.578e+5.
 
 \section{Task b}
 It is given that a ball is thrown at a random angle $\theta \in$ [0, 360) which is in degrees and in a random radius r $\in$ [0, 1] which are both independent and uniform. Due to the fact the random variables are uniform we can easily define their respective density functions f($\theta$) = $\frac{1}{360}$ and f(r) = 1. This can be calculated because the PDF of a uniformly distributed function is given by 
